Fix search bar alignment.

--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -11,14 +11,14 @@
 
 
 .search {
-  width: 90%;
+  width: 100%;
   position: relative;
   display: flex;
   margin-bottom: 10px;
 }
 
 .searchTerm {
-  width: 90%;
+  width: 100%;
   border: 3px solid rgb(7, 50, 90);
   border-right: none;
   padding: 5px;
