--- a/src/UserPreferences/UserPreferences.css
+++ b/src/UserPreferences/UserPreferences.css
@@ -18,7 +18,7 @@
 }
 
 .sliderContainer {
-  width: 100%;
+  width: 75%;
 }
 
 .spacer {
